<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main_activity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="I am an"
        android:textColor="@color/light_blue"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attendee_button"
        android:layout_width="235dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/green"
        android:text="@string/attendee"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/organizer_button"
        android:layout_width="235dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/organizer"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendee_button">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/green"
        android:paddingHorizontal="38dp"
        android:paddingVertical="13dp"
        android:text="@string/administrator"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/organizer_button">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>