...
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="a notification bell"
            app:srcCompat="@drawable/notification" />

        <TextView
            android:id="@+id/permission_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bell_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="10dp"
...
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/permission_checkbox"
            android:layout_marginBottom="25dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_thanks_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/light_gray"
                android:text="@string/no_thanks_button"
                android:textColor="@color/black"
                android:textSize="18sp"
...
