<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.AdminActivity"
    android:id="@+id/admin_activity_layout"
    android:orientation="vertical">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/admin_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="@color/light_blue"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/light_blue"
        app:tabTextAppearance="@style/AdminTabText"
        app:tabIndicatorFullWidth="true"
        app:tabTextColor="#3F7988">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/events_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/users_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/images_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Images"/>

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/admin_tab_layout">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/admin_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/admin_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/green"
            android:ems="4"
            android:text="@string/back"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:stateListAnimator="@null"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            app:cornerRadius="10dp">
        </com.google.android.material.button.MaterialButton>

    </FrameLayout>



</RelativeLayout>