...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".organizer.OrganizerMainMenuActivity"
    android:id="@+id/organizer_menu_layout">

    <LinearLayout
        android:id="@+id/eventContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="30dp"
...
