<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.ImagesFragment">

    <GridView
        android:id="@+id/image_grid_view"
        android:layout_marginTop="2dp"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:numColumns="3"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </GridView>

</androidx.constraintlayout.widget.ConstraintLayout>