<resources>
    <string name="app_name">EventGate</string>
    <string name="attendee">Attendee</string>
    <string name="organizer">Organizer</string>
    <string name="administrator">Administrator</string>
    <string name="events_title">Events</string>
    <string name="users_title">Users</string>
    <string name="back">Back</string>
    <string name="your_events">Your Events</string>
    <string name="create_new_event">Create New Event</string>
    <string name="generate_new_qr_code">Generate New QR Code</string>
    <string name="organizerCreateEventContinue">Continue</string>
    <string name="organizerCreateEventCancel">Cancel</string>
    <string name="event_name">Event Name</string>
    <string name="name">Name</string>
    <string name="event_description">Event Description</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="qrcode">QRCode</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="create_event">Create Event</string>
    <string name="generate_check_in_qr">Generate Check In QR</string>
    <string name="generate_event_qr">Generate Event QR</string>
    <string name="eventDescriptionQR">EventDescriptionQR</string>
    <string name="create_alert_title">Create Alert</string>
    <string name="send_button">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_title">Enter Title</string>
    <string name="alert_title">Alert Title</string>
    <string name="realtime_attendance">Realtime Attendance:</string>
    <string name="hashtag">#</string>
    <string name="attendees_list">List of Attendees</string>
    <string name="notification_info">EventGate would like to send you notifications. Enabling
        notifications keep you informed about event updates and milestones that your events have
        reached. Notifications can be always be managed in settings at a later time.</string>
    <string name="no_thanks_button">No Thanks</string>
    <string name="ok_button">OK</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="attendees_title">Attendees</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Are you sure you want to delete</string>
    <string name="delete_message">will be deleted permanently. You cannot undo this action.</string>
    <string name="attendee_info">Attendee Info</string>
    <string name="attendance_limit">Attendance Limit</string>
    <string name="event_details">Event Details</string>
    <string name="edit_qr">Edit QR</string>
    <string name="qr_codes">QR Codes</string>
    <string name="check_in_qr_code">Check-In QR Code</string>
    <string name="event_details_qr_code">Event Details QR Code</string>
    <string name="share_qr">Share QR</string>
    <string name="organizer_view_qr_codes">QR Codes</string>
    <string name="generate_qr_code_edit">Generate QR Code</string>
    <string name="generate_qr">Generate QR</string>
    <string name="generate_check_in_qr_edit">Generate QR</string>
    <string name="reuse_existing_qr">Reuse Existing QR</string>
    <string name="generate_detail_qr">Generate Detail QR</string>
    <string name="select_check_in_qr_code">Select Check-In QR Code</string>
    <string name="reuse_qr">Reuse QR</string>
    <string name="share_check_in_qr">Share Check-In QR</string>
    <string name="share_details_qr">Share Details QR</string>
    <string name="create_an_event">Create an Event</string>
    <string name="event_name_details">Event name</string>
    <string name="eventPoster">eventPoster</string>
    <string name="qr">QR</string>
    <string name="attendance_limit_optional">Attendance Limit (Optional)</string>
</resources>